banner section addad

--- a/index.html
+++ b/index.html
@@ -67,5 +67,70 @@
       </div>
     </header>
     <!-- navbar End -->
+    <!-- banner start -->
+    <div class="bg-[#F0f1EE]">
+      <div class="container mx-auto px-10 py-10">
+        <div class="grid grid-cols-2 gap-16">
+          <div class="ml-40">
+            <div class="rating mb-3">
+              <input
+                type="radio"
+                name="rating-4"
+                class="mask mask-star-2 bg-orange-600"
+              />
+              <input
+                type="radio"
+                name="rating-4"
+                class="mask mask-star-2 bg-orange-600"
+              />
+              <input
+                type="radio"
+                name="rating-4"
+                class="mask mask-star-2 bg-orange-600"
+              />
+              <input
+                type="radio"
+                name="rating-4"
+                class="mask mask-star-2 bg-orange-600 checked="
+                checked
+              />
+              <input
+                type="radio"
+                name="rating-4"
+                class="mask mask-star-2 bg-orange-600"
+              />
+              <h2 class="text-2xl ml-3 font-medium">4.9 (566)</h2>
+            </div>
+            <h1 class="text-5xl font-bold leading-[56px`]">
+              #1 Platform <br />
+              Powering Health <br />
+              and Wellness
+            </h1>
+            <p class="text-2xl font-semibold mt-10">
+              We re restoring home as the primary <br />
+              place of personal well-being
+            </p>
+            <p class="mt-6">
+              Health is not just about what you're eating. It's also <br />
+              about what you're thinking and saying
+            </p>
+            <div class="mt-8">
+              <button class="px-6 py-4 bg-[#287279] rounded-3xl">
+                Browse Courses
+              </button>
+              <button
+                class="px-6 py-4 bg-transparent border border-[#287279] rounded-3xl ml-4"
+              >
+                Get Started
+              </button>
+            </div>
+          </div>
+          <div>
+            <img class="w-96 relative" src="imges/banner.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- banner End -->
   </body>
 </html>
