popular courses card addad

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font awesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- tailind /daisyul cdn -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css"
@@ -132,5 +140,211 @@
       </div>
     </div>
     <!-- banner End -->
+    <!-- Our popular courses area start -->
+    <div class="container mx-auto px-10 py-10">
+      <div class="mt-24">
+        <h2 class="text-[40px] font-bold">Our popular courses</h2>
+        <p class="mb-3">
+          By taking proactive steps to nurture mental health, we can enhance our
+          quality of life, <br />
+          build resilience, and foster a sense of inner peace and balance
+        </p>
+      </div>
+      <div class="grid grid-cols-3 mt-14 gap-7">
+        <div class="border border-[#00000033] pb-4 rounded-xl">
+          <img src="imges/popular-card3.png" alt="" />
+
+          <div class="mt-6 flex gap-2 ml-3">
+            <h5
+              class="bg-[#ff97001A] w-24 text-center border border-[#ff970080] rounded-[5px]"
+            >
+              Beginner
+            </h5>
+            <h5
+              class="bg-[#cde53333] w-36 text-center border border-[#ff970080] rounded-[5px]"
+            >
+              Nutrition and Diet
+            </h5>
+          </div>
+          <div>
+            <h2 class="text-2xl font-semibold leading-[32px] mt-4 ml-3">
+              Foundation of Sleep: Sleep Science and Sleep Disorders
+            </h2>
+          </div>
+          <div class="rating mt-4 ml-3">
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600 checked="
+              checked
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <h2 class="text-2xl ml-3 font-medium">4.9 (566)</h2>
+          </div>
+          <div class="mt-14 flex gap-16 ml-3">
+            <h3 class="text-[16px] font-medium">
+              <i class="fa-solid fa-clock mr-2"></i>6h 34m
+            </h3>
+            <h3 class="text-[16px] font-medium mb-5">
+              <i class="fa-solid fa-book-open mr-2"></i>3 Lessons
+            </h3>
+          </div>
+          <hr />
+          <div class="mt-4 flex items-center gap-1 ml-3">
+            <img src="imges/Mask group (1).png" alt="" />
+            <h4 class="text-[16px] font-medium">Kilian Murphe</h4>
+            <h2 class="ml-40 text-2xl font-medium">$40</h2>
+          </div>
+        </div>
+        <div class="border border-[#00000033] pb-4 rounded-xl">
+          <img src="imges/popular-card2.png" alt="" />
+
+          <div class="mt-6 flex gap-2 ml-3">
+            <h5
+              class="bg-[#ff97001A] w-24 text-center border border-[#ff970080] rounded-[5px]"
+            >
+              Intermediate
+            </h5>
+            <h5
+              class="bg-[#cde53333] w-40 text-center border border-[#ff970080] rounded-[5px]"
+            >
+              Health and Wellness
+            </h5>
+          </div>
+          <div>
+            <h2 class="text-2xl font-semibold leading-[32px] mt-4 ml-3">
+              Parenting in the Digital Age: Navigating Screen Time
+            </h2>
+          </div>
+          <div class="rating mt-4 ml-3">
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600 checked="
+              checked
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <h2 class="text-2xl ml-3 font-medium">4.9 (566)</h2>
+          </div>
+          <div class="mt-14 flex gap-16 ml-3">
+            <h3 class="text-[16px] font-medium">
+              <i class="fa-solid fa-clock mr-2"></i>6h 34m
+            </h3>
+            <h3 class="text-[16px] font-medium mb-5">
+              <i class="fa-solid fa-book-open mr-2"></i>3 Lessons
+            </h3>
+          </div>
+          <hr />
+          <div class="mt-4 flex items-center gap-1 ml-3">
+            <img src="imges/Mask group (2).png" alt="" />
+            <h4 class="text-[16px] font-medium">Kilian Murphe</h4>
+            <h2 class="ml-40 text-2xl font-medium">$50</h2>
+          </div>
+        </div>
+        <div class="border border-[#00000033] pb-4 rounded-xl">
+          <img src="imges/popular-card1.png" alt="" />
+
+          <div class="mt-6 flex gap-2 ml-3">
+            <h5
+              class="bg-[#ff97001A] w-24 text-center border border-[#ff970080] rounded-[5px]"
+            >
+              Beginner
+            </h5>
+            <h5
+              class="bg-[#cde53333] w-36 text-center border border-[#ff970080] rounded-[5px]"
+            >
+              Nutrition and Diet
+            </h5>
+          </div>
+          <div>
+            <h2 class="text-2xl font-semibold leading-[32px] mt-4 ml-3">
+              Holistic Health: Integrating Mind, Body, and Spirit
+            </h2>
+          </div>
+          <div class="rating mt-4 ml-3">
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600 checked="
+              checked
+            />
+            <input
+              type="radio"
+              name="rating-4"
+              class="mask mask-star-2 bg-orange-600"
+            />
+            <h2 class="text-2xl ml-3 font-medium">4.9 (566)</h2>
+          </div>
+          <div class="mt-14 flex gap-16 ml-3">
+            <h3 class="text-[16px] font-medium">
+              <i class="fa-solid fa-clock mr-2"></i>6h 34m
+            </h3>
+            <h3 class="text-[16px] font-medium mb-5">
+              <i class="fa-solid fa-book-open mr-2"></i>3 Lessons
+            </h3>
+          </div>
+          <hr />
+          <div class="mt-4 flex items-center gap-1 ml-3">
+            <img src="imges/Mask group (1).png" alt="" />
+            <h4 class="text-[16px] font-medium">Kilian Murphe</h4>
+            <h2 class="ml-40 text-2xl font-medium">$40</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Our popular courses area End -->
   </body>
 </html>
