--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <!-- banner End -->
     <!-- Our popular courses area start -->
     <div class="container mx-auto px-10 py-10">
+      ar
       <div class="mt-24">
         <h2 class="text-[40px] font-bold">Our popular courses</h2>
         <p class="mb-3">
@@ -346,5 +347,189 @@
       </div>
     </div>
     <!-- Our popular courses area End -->
+    <!-- We provide start -->
+    <div class="container mx-auto py-10 px-10">
+      <div class="grid grid-cols-2">
+        <div>
+          <h2 class="text-4xl font-bold">We provide...</h2>
+          <h3 class="mt-10 text-[20px] font-medium">
+            <i class="fa-solid fa-circle-check mr-8"></i>Personalized routine
+          </h3>
+          <h3 class="mt-10 text-[20px] font-medium">
+            <i class="fa-solid fa-circle-check mr-8 mb-5"></i>
+            Follow-up after completing courses
+          </h3>
+          <hr />
+          <h3 class="mt-10 text-[20px] font-medium">
+            <i class="fa-solid fa-circle-check mr-8"></i>
+            Access to additional resources
+          </h3>
+          <p class="ml-12 mb-5">
+            We offer access to a variety of additional resources to <br />
+            enhance your experience, including exclusive tools, guides, <br />
+            and support materials designed to help you achieve your goals <br />
+            more effectively.
+          </p>
+          <hr />
+
+          <h3 class="mt-10 text-[20px] font-medium">
+            <i class="fa-solid fa-circle-check mr-8"></i>Free community support
+          </h3>
+          <button
+            class="px-6 py-4 border border-[#287279] rounded-[32px] mt-10 text-[#287279] font-semibold"
+          >
+            Learn More About Our Services
+          </button>
+        </div>
+        <div>
+          <img class="w-auto" src="imges/provide-photo.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <!-- We provide ENd -->
+    <!-- Learners love EduPath section -->
+    <div class="container mx-auto px-10 py-10">
+      <h2 class="text-[40px] font-semibold text-center leading-none">
+        Learners love EduPath. See why <br />
+        they rate us 4.9 out of 5
+      </h2>
+
+      <div class="grid grid-cols-4 mt-14 gap-6">
+        <div class="bg-[#9998E133] p-7 rounded-[13px]">
+          <div class="flex items-center">
+            <img src="imges/Mask group (1).png" alt="" />
+            <div class="ml-36">
+              <img src="imges/Vector.png" alt="" />
+            </div>
+          </div>
+
+          <h2 class="font-bold text-[16px] mt-4">Kilian Murphe</h2>
+          <p class="font-[500] mt-4 font-sans leading-[24px]">
+            “The mindfulness courses have helped me manage stress better and
+            find balance in my daily life. The guided meditations are a
+            highlight! The courses are well worth the investment and have made a
+            positive impact on my life."
+          </p>
+        </div>
+        <div class="bg-[#9998E133] p-7 rounded-[13px]">
+          <div class="flex items-center">
+            <img src="imges/Mask group (1).png" alt="" />
+            <div class="ml-36">
+              <img src="imges/Vector.png" alt="" />
+            </div>
+          </div>
+
+          <h2 class="font-bold text-[16px] mt-4">Kilian Murphe</h2>
+          <p class="font-[500] mt-4 font-sans leading-[24px]">
+            “The mindfulness courses have helped me manage stress better and
+            find balance in my daily life. The guided meditations are a
+            highlight! The courses are well worth the investment and have made a
+            positive impact on my life."
+          </p>
+        </div>
+        <div class="bg-[#9998E133] p-7 rounded-[13px]">
+          <div class="flex items-center">
+            <img src="imges/Mask group (1).png" alt="" />
+            <div class="ml-36">
+              <img src="imges/Vector.png" alt="" />
+            </div>
+          </div>
+
+          <h2 class="font-bold text-[16px] mt-4">Kilian Murphe</h2>
+          <p class="font-[500] mt-4 font-sans leading-[24px]">
+            “The mindfulness courses have helped me manage stress better and
+            find balance in my daily life. The guided meditations are a
+            highlight! The courses are well worth the investment and have made a
+            positive impact on my life."
+          </p>
+        </div>
+        <div class="bg-[#9998E133] p-7 rounded-[13px]">
+          <div class="flex items-center">
+            <img src="imges/Mask group (1).png" alt="" />
+            <div class="ml-36">
+              <img src="imges/Vector.png" alt="" />
+            </div>
+          </div>
+
+          <h2 class="font-bold text-[16px] mt-4">Kilian Murphe</h2>
+          <p class="font-[500] mt-4 font-sans leading-[24px]">
+            “The mindfulness courses have helped me manage stress better and
+            find balance in my daily life. The guided meditations are a
+            highlight! The courses are well worth the investment and have made a
+            positive impact on my life."
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- Learners love EduPath section end-->
+    <!-- footer start -->
+    <div class="bg-base-200">
+      <div class="container mx-auto px-10 py-10">
+        <footer class="footer text-base-content p-10 ml-16">
+          <nav>
+            <h6 class="footer-title">Categories</h6>
+            <a class="link link-hover">Nutrition and diet</a>
+            <a class="link link-hover">Fitness training</a>
+            <a class="link link-hover">Mindfulness</a>
+            <a class="link link-hover">Mental health</a>
+            <a class="link link-hover">Personal growth</a>
+            <a class="link link-hover">Social well-being</a>
+          </nav>
+          <nav>
+            <h6 class="footer-title">About</h6>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Our partners</a>
+            <a class="link link-hover">Investors</a>
+            <a class="link link-hover">Career</a>
+          </nav>
+          <nav>
+            <h6 class="footer-title">Resources</h6>
+            <a class="link link-hover">FAQ</a>
+            <a class="link link-hover">Refund policies</a>
+            <a class="link link-hover">CTerms and conditions</a>
+            <a class="link link-hover">Cookie </a>
+            <a class="link link-hover">Latest posts</a>
+          </nav>
+          <nav>
+            <h6 class="footer-title">Support</h6>
+            <a class="link link-hover">Get in touch</a>
+            <a class="link link-hover">Privacy policy</a>
+            <a class="link link-hover">Visit our forum</a>
+          </nav>
+        </footer>
+        <footer
+          class="footer bg-base-200 text-base-content border-base-300 border-t px-10 py-4"
+        >
+          <aside class="grid-flow-col items-center">
+            <p class="text-[20px] font-medium">Join our official channels</p>
+          </aside>
+          <nav class="md:place-self-center md:justify-self-end">
+            <div class="grid grid-flow-col gap-4">
+              <a
+                ><i
+                  class="fa-brands fa-square-instagram text-4xl text-[#00000080]"
+                ></i>
+              </a>
+              <a>
+                <i
+                  class="fa-sharp fa-solid fa-square-xmark text-4xl text-[#00000080]"
+                ></i
+              ></a>
+              <a
+                ><i
+                  class="fa-brands fa-square-facebook text-4xl text-[#00000080]"
+                ></i>
+              </a>
+              <a
+                ><i
+                  class="fa-brands fa-github-alt text-4xl text-[#00000080]"
+                ></i>
+              </a>
+            </div>
+          </nav>
+        </footer>
+      </div>
+    </div>
+    <!-- footer end -->
   </body>
 </html>
