--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- banner start -->
     <div class="bg-[#F0f1EE]">
       <div class="container mx-auto px-10 py-10">
-        <div class="grid grid-cols-2 gap-16">
+        <div class="xl:grid md:grid-cols-2 gap-16">
           <div class="ml-40">
             <div class="rating mb-3">
               <input
@@ -142,7 +142,6 @@
     <!-- banner End -->
     <!-- Our popular courses area start -->
     <div class="container mx-auto px-10 py-10">
-      ar
       <div class="mt-24">
         <h2 class="text-[40px] font-bold">Our popular courses</h2>
         <p class="mb-3">
@@ -151,7 +150,7 @@
           build resilience, and foster a sense of inner peace and balance
         </p>
       </div>
-      <div class="grid grid-cols-3 mt-14 gap-7">
+      <div class="xl:grid grid-cols-3 md:grid-cols-2 mt-14 gap-7">
         <div class="border border-[#00000033] pb-4 rounded-xl">
           <img src="imges/popular-card3.png" alt="" />
 
@@ -349,7 +348,7 @@
     <!-- Our popular courses area End -->
     <!-- We provide start -->
     <div class="container mx-auto py-10 px-10">
-      <div class="grid grid-cols-2">
+      <div class="xl:grid md:grid-cols-2">
         <div>
           <h2 class="text-4xl font-bold">We provide...</h2>
           <h3 class="mt-10 text-[20px] font-medium">
@@ -394,7 +393,7 @@
         they rate us 4.9 out of 5
       </h2>
 
-      <div class="grid grid-cols-4 mt-14 gap-6">
+      <div class="xl:grid grid-cols-4 md:grid-cols-2 mt-14 gap-6">
         <div class="bg-[#9998E133] p-7 rounded-[13px]">
           <div class="flex items-center">
             <img src="imges/Mask group (1).png" alt="" />
